Audit cycle: 73 fixes across all 23 features (11 deep-audit sessions)
Eleven rounds of feature-by-feature audit + cross-cutting sweeps,
all verified with `./gradlew assembleProdRelease` + `./gradlew test`
green. Each session is documented in PROGRESS.md.

## What changed by area

Plant Journal + Weather (sessions 1-3): cloud sync for memos with
val→var Firestore-deserialisation fix, GPS jitter cache key
(Locale.US 2-decimal rounding), worker NetworkType.CONNECTED
constraint, weather_prefs cleared on logout, Firestore rules +
ProGuard rule for new entities.

Notifications + Vacation (sessions 4-5): goAsync() in
NotificationActionReceiver, IMPORTANCE_HIGH channel, KEEP→UPDATE
worker policy, welcome-back catch-up logic, vacation cloud sync,
Mark-all-watered action button, Locale.US in worker date formats.

Streaks + Challenges (session 6): wired previously-dead callers
(recordPlantCountForChallenge, markMonthlyPhotoDone), monthly
reset via monthKey, cloud sync for StreakDoc + ChallengesDoc with
schema-evolution-safe restore.

Family Share + PDF + Main + Settings (session 7): Plant.sharedWith
syncs to Firestore, M1 wire-format Locale.US in handleCameraResult,
disease-button thread leak fix, DataExportManager v2 covers all 9
data categories (was plants+reminders only — GDPR Article 20).

Cross-cutting re-audit (session 8): NotificationActionReceiver
streak update (Z1), MemoirPdfBuilder distinguish OOM, monthKey
empty-vs-set both stale.

Widget + Billing/Ads (session 9): Widget refresh on
DataChangeNotifier (was permanently stale), AdManager observes
isPro live, acknowledgePurchase retry with backoff, Pro status
cloud sync with lastUpdatedMs merge, paywall auto-dismiss.

Cloud Sync + Security + Perf (session 10): firestore.rules splits
read/delete from create/update (CS1 — every cloud delete was being
rejected!), new storage.rules + firebase.json storage block,
SecurePrefsHelper caches the EncryptedSharedPreferences instance
(PERF1, called from 24+ sites), BgExecutor pool